[gd_scene load_steps=9 format=3 uid="uid://cqehuu06xxkum"]

[ext_resource type="Script" uid="uid://csgpl34of36xn" path="res://vehicles/Car.gd" id="1_s5qql"]
[ext_resource type="Material" uid="uid://lx8t0tfuvrrw" path="res://materials/LackRed.tres" id="2_ompmy"]
[ext_resource type="Material" uid="uid://5ipfamgkcp7e" path="res://materials/TireMaterial.tres" id="3_mo5vq"]
[ext_resource type="PackedScene" uid="uid://dt4vauql4gx0y" path="res://components/HalfCapsule.tscn" id="3_qdx7j"]
[ext_resource type="Material" uid="uid://b2gtoyl87ttku" path="res://materials/ColoredGlass.tres" id="4_5fmut"]
[ext_resource type="Script" uid="uid://bvt1w1upmd45v" path="res://utils/Interpol.gd" id="6_uacvp"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_s5qql"]
height = 1.5

[sub_resource type="TorusMesh" id="TorusMesh_s5qql"]
inner_radius = 0.1
outer_radius = 0.3

[node name="Car" type="Node3D"]
script = ExtResource("1_s5qql")

[node name="Body" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -0.5, 0, 1, -2.1855694e-08, 0, 0.4, 0)
mesh = SubResource("CapsuleMesh_s5qql")
surface_material_override/0 = ExtResource("2_ompmy")

[node name="HalfCapsule" parent="Body" instance=ExtResource("3_qdx7j")]
transform = Transform3D(0.5, 0, 0, 0, -2.1855694e-08, 0.5, 0, -1, -4.371139e-08, 0, 0, -0.43)
material = ExtResource("4_5fmut")

[node name="FL" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, -0.3)

[node name="NutFL" type="Node3D" parent="FL"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.65, 0, 0)

[node name="WheelFL" type="MeshInstance3D" parent="FL/NutFL"]
unique_name_in_owner = true
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("TorusMesh_s5qql")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("3_mo5vq")

[node name="FR" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, -0.3)

[node name="NutFR" type="Node3D" parent="FR"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.65, 0, 0)

[node name="WheelFR" type="MeshInstance3D" parent="FR/NutFR"]
unique_name_in_owner = true
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("TorusMesh_s5qql")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("3_mo5vq")

[node name="BL" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0.3)

[node name="NutBL" type="Node3D" parent="BL"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.65, 0, 0)

[node name="WheelBL" type="MeshInstance3D" parent="BL/NutBL"]
unique_name_in_owner = true
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("TorusMesh_s5qql")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("3_mo5vq")

[node name="BR" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0.3)

[node name="NutBR" type="Node3D" parent="BR"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.65, 0, 0)

[node name="WheelBR" type="MeshInstance3D" parent="BR/NutBR"]
unique_name_in_owner = true
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("TorusMesh_s5qql")
skeleton = NodePath("../../..")
surface_material_override/0 = ExtResource("3_mo5vq")

[node name="forward" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_uacvp")
secs = 0.30000000000000004
metadata/_custom_type_script = "uid://bvt1w1upmd45v"

[node name="steer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_uacvp")
secs = 0.2
metadata/_custom_type_script = "uid://bvt1w1upmd45v"
